Add Stats and Fix Result

--- a/views/data.ejs
+++ b/views/data.ejs
@@ -84,6 +84,9 @@
 			<div class="abc">
 				<a href="/employeeList">Результат</a>
 			</div>
+			<div class="abc">
+				<a href="/stats">Статистика</a>
+			</div>
 		<% }%>
 	</div>
 </body>
